unpackaged/main/default/objects/MIDJ__c/MIDJ__c.object-meta.xml
<CustomObject>
    <label>MID</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>