unpackaged/main/default/objects/MIDJ__c/fields/MerchantID__c.field-meta.xml
<CustomField>
    <fullName>MerchantID__c</fullName>
    <formula>MID__r.MID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MID</label>
    <type>Text</type>
</CustomField>