unpackaged/main/default/objects/MIDJ__c/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MID</label>
    <referenceTo>MID__c</referenceTo>
    <relationshipLabel>MIDs</relationshipLabel>
    <relationshipName>MID</relationshipName>
    <type>Lookup</type>
</CustomField>