unpackaged/main/default/objects/MIDJ__c/listViews/POS_Support_GB_MIDJ.listView-meta.xml
<ListView>
    <fullName>POS_Support_GB_MIDJ</fullName>
    <filterScope>Queue</filterScope>
    <label>POS Support GB</label>
    <queue>POS_Support_GB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>